# cash2

./: Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/src/: ast.rs  context.rs  error.rs  executor.rs  grammar.pest  lib.rs  rules.rs  value.rs
backend/src/cashstd/: dispatch.rs  list.rs  math.rs  mod.rs
backend/src/nodes/: assignment.rs  block.rs  conditionals.rs  expr.rs  ident.rs  keywordstatement.rs  literals.rs  loops.rs  mod.rs  pipe.rs
backend/src/values/: boolean.rs  builtin.rs  dict.rs  float.rs  function.rs  future.rs  integer.rs  list.rs  mod.rs  none.rs  range.rs  string.rs  wrapped.rs
doc/: LANGUAGE.md  README.md
examples/: async_stuff.cash  fibonacci.cash  ui.cash
testing_frontend/: Cargo.toml
testing_frontend/src/: main.rs
