[package]
name = "backend"
version = "0.1.0"
authors = ["Niklas Loeser <51879435+data-niklas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
smol = "1.2.4"
pest = "2.1.3"
pest_derive = "2.1"