[package]
name = "backend"
version = "0.1.0"
authors = ["Niklas Loeser <51879435+data-niklas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["deadlock_detection"]
deadlock_detection = []
[dependencies]
threadpool = "1.8.1"
glob = "0.3"
pest = "2.1.3"
pest_derive = "2.1"
thiserror = "1.0"
downcast-rs = "1.2.0"
dirs = "3.0.1"
rand = "0.7.3"
num_cpus = "1.13.0"
parking_lot = { version = "0.11", features = ["deadlock_detection"] }